# third_party_xmp_toolkit_sdk

./: BUILD.gn  OAT.xml  README-OpenHarmony_en.md  README-OpenHarmony_zh.md  README.OpenSource  README_en.md  README_zh.md  bundle.json  xmpsdk.versionscript
XMPCore/source/: ExpatAdapter.cpp  XMPMeta.cpp
XMPFiles/source/FileHandlers/: JPEG_Handler.cpp  SVG_Handler.hpp  TIFF_Handler.cpp  UCF_Handler.cpp
XMPFiles/source/FormatSupport/: SVG_Adapter.cpp  SWF_Support.cpp  SWF_Support.hpp
XMPFilesPlugins/api/source/: HostAPIAccess.h  PluginBase.h
patches/: patches.json
public/include/: XMP_Const.h
source/: XMPBuffer_IO.cpp  XMPBuffer_IO.hpp  XMPFd_IO.cpp  XMPFd_IO.hpp
